# Steerable-Motion

./: .gitignore  LICENSE.txt  README.md  SteerableMotion.py  __init__.py  control.py  logger.py  nodes.py  pyproject.toml  video_continuation_simulation.py
control/: IPAdapterPlus.py  control.py  deprecated_nodes.py  film.py  latent_keyframe_nodes.py  nodes.py  weight_nodes.py
demo/: SuperBeasts-POM-SmoothBatchCreative-V1.3.1 (1).json  SuperBeasts-POM-SmoothBatchCreative-V1.3.1.json  SuperBeasts-POM-SmoothBatchCreative-V1.3.json  Vace_Travel.json  creative_interpolation_example.json  creative_interpolation_example_lcm.json  creative_interpolation_example_lcm.json.json  steerable-motion_chocky-realistiche.json  steerable-motion_liquidy-loop.json  steerable-motion_liquity_loop.json  steerable-motion_rad-attack.json  steerable-motion_slurshy-realistiche.json  steerable-motion_smooth-n-steady.json
imports/: AdvancedControlNet.py  IPAdapterPlus.py
imports/AdvancedControlNet/: control.py  control_sparsectrl.py  deprecated_nodes.py  latent_keyframe_nodes.py  nodes.py  nodes_sparsectrl.py  reference_nodes.py  weight_nodes.py
imports/ComfyUI_Frame_Interpolation/: __init__.py  import_vfi_utils.py
imports/ComfyUI_Frame_Interpolation/vfi_models/film/: __init__.py  film_arch.py
imports/ComfyUI_Frame_Interpolation/vfi_models/flavr/: flavr_arch.py
imports/ComfyUI_Frame_Interpolation/vfi_models/ifrnet/: __init__.py
imports/ComfyUI_IPAdapter_plus/: CrossAttentionPatchImport.py  IPAdapterPlus.py  image_proj_models.py
(+2 files in other folders)
