[project]
name = "steerable-motion"
description = "Steerable Motion is a ComfyUI node for batch creative interpolation. Our goal is to feature the best methods for steering motion with images as video models evolve."
version = "1.0.0"
license = "LICENSE"
dependencies = ["matplotlib"]

[project.urls]
Repository = "https://github.com/banodoco/steerable-motion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "steerable-motion"
Icon = ""
